--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
+        "@mui/lab": "^6.0.0-beta.24",
         "@mui/material": "^6.4.1",
+        "@mui/utils": "^6.4.1",
+        "@mui/x-date-pickers": "^7.24.1",
+        "dayjs": "^1.11.13",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^7.1.3",
